--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -16,4 +16,4 @@ header-includes:
 knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
 ```
 
-![](images/SpositoCV.pdf){width=100% height=1000}.
+![](CV/Sposito_CV.pdf){width=100% height=1000}.
