--- a/index.Rmd
+++ b/index.Rmd
@@ -19,11 +19,9 @@ output: html_document
 
 # **Henrique Sposito**
 
-- I am a proactive, determined, and reliable individual with excellent teamwork skills. I hold a Brazilian and Italian nationality and a Swiss B permit. During my free time, I restore vintage bicycles.
+I am currently a PhD candidate at the International Relations and Political Science Department at the Geneva Graduate Institute (IHEID). My dissertation leverages advanced text analysis techniques in R, such as Natural Language Processes (NLP) and supervised machine learning, to investigate how authenticity, problem construction, and urgency appear and change over time and across settings in discursive politics. I work as a Research Assistant in the "PANARCHIC: Power and Network and the Rate of Change in Institutional Complexes" project at the Center for International Environmental Studies (CIES). For the project, I develop, contribute, and help maintain several R packages that assist researchers dealing with multiple, overlapping, and uncertain datasets across various domains of global governance. During my free time, I restore vintage bikes.
 
-- Currently I am a PhD Candidate in International Relations and Political Science at The Geneva Graduate Institute and work as a Research Assistant at the Center for International Environmental Studies.
-
-- Check out my new research article title on [Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985 (with Livio Silva-Muller)](https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639)
+*Check out my new research article on [Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985 (with Livio Silva-Muller)](https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639)*
 
 </div>
 <div class="col-sm-6">
