--- a/cv.Rmd
+++ b/cv.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "CV"
+title: "Curriculum Vitae"
 output:
   html_document:
     toc: true
@@ -11,6 +11,13 @@ output:
 header-includes:
 - \usepackage{float}
 ---
+
+<style type="text/css">
+h1.title {
+  font-size: 40px;
+  text-align: center;
+}
+</style>
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
