--- a/CV/Sposito_CV.Rmd
+++ b/CV/Sposito_CV.Rmd
@@ -4,9 +4,12 @@ surname: Sposito
 position: Researcher
 phone: +41 79 761 6863
 email: henrique.sposito@graduateinstitute.ch
+website: henriquesposito.com
 github: henriquesposito
+twitter: rickysposito
 aboutme: I am a proactive, determined, and reliable individual with excellent teamwork skills. I hold a Brazilian and Italian nationality and a Swiss B permit. During my free time, I restore vintage bicycles.
-output: 
+headcolor: "556B2F"
+output:
   vitae::awesomecv:
     page_total: true
 header-includes:
@@ -62,14 +65,23 @@ tribble(~ What, ~ When, ~ With, ~ Where, ~ Why,
         \\begin{itemize}
         \\item Help develop data infrastructure and statistical methods in R, offered as an emsemble of R packages, for the gathering, consolidation, and analysis of global governance data.
         \\item Train and manage Masters' research assistants to work with data colletion, R programming and package development, GitHub branching, and other theoretical and practical issues related to the project.
-        \\end{itemize}",
-        "Football Head Coach", "May 2018 - Aug 2020", "Intersoccer", "Geneva, Switzerland",
-        "Ensured a safe and constructive environment for participants, coaches, and parents while promoting the benefits of sports
-        \\begin{itemize}
-        \\item Supervised coaches and participants throughout activities to ensure their safety.
-        \\item Communicated with coaches, children, and parents to cordinate and solve logistical issues related to transportation, venue organization, and delivery of supplies, as well as any medical emergencies and other unexpected events that arose.
         \\end{itemize}") %>% 
   detailed_entries(What, When, With, Where, Why, .protect = FALSE)
+##long version
+# tribble(~ What, ~ When, ~ With, ~ Where, ~ Why,
+#         "Research Assistant", "Sep 2020 - Present", "Center for International Environmental Studies (CIES)", "Geneva, Switzerland",
+#         "Assist with the theoretical, methodological, and empirical developments in data and analysis for across various domains of global governance in the project called 'Power and Networks and the Rate of Change in Institutional Complexes' (PANARCHIC), funded by the Swiss National Science Foundation (SNSF)
+#         \\begin{itemize}
+#         \\item Help develop data infrastructure and statistical methods in R, offered as an emsemble of R packages, for the gathering, consolidation, and analysis of global governance data.
+#         \\item Train and manage Masters' research assistants to work with data colletion, R programming and package development, GitHub branching, and other theoretical and practical issues related to the project.
+#         \\end{itemize}",
+#         "Football Head Coach", "May 2018 - Aug 2020", "Intersoccer", "Geneva, Switzerland",
+#         "Ensured a safe and constructive environment for participants, coaches, and parents while promoting the benefits of sports
+#         \\begin{itemize}
+#         \\item Supervised coaches and participants throughout activities to ensure their safety.
+#         \\item Communicated with coaches, children, and parents to cordinate and solve logistical issues related to transportation, venue organization, and delivery of supplies, as well as any medical emergencies and other unexpected events that arose.
+#         \\end{itemize}") %>% 
+#   detailed_entries(What, When, With, Where, Why, .protect = FALSE)
 ```
 
 # Publications
@@ -98,35 +110,19 @@ tribble(~ Title, ~ Published, ~ Journal,  ~ Why,
 tribble(~ Course, ~ Where, ~ Date, ~ Why, 
   "Fundamentals of R (co-lecturered with Livio Silva-Muller)",
   "The Graduate Institute of International and Development Studies (IHEID)",
-  "Fall 2022, Spring 2023",
-  "This course offers masters' students a hands on introduction to data science using the R programming language and software. We teach students how to import, transform, analyze, and visualize various types of data in R. To help students think through data, we show practical applications of R for the analysis of environment, finance, and conflict data.") %>% 
+  "Fall 2022, Spring 2023, Fall 2023",
+  "This course offers masters' students a hands on introduction to data science using the R programming language and software. We teach students how to import, transform, analyze, and visualize various types of data in R. To help students think through data, we show practical applications of R for the analysis of environment, finance, and conflict data.",
+  "Intermediate R for Social Science Research",
+  "The Graduate Institute of International and Development Studies (IHEID)",
+  "Fall 2023",
+  "This course offers masters' students an applied overview of various research methods using R. Students learn how to write, cite, and include table and figures using R Markdown; how to select and carry-on different types of statistical modeling; how to work with unsupervised approaches for text analysis; and how to code, visualize, and model network data.") %>% 
   detailed_entries(what = Where, with = Course, when = Date, why = Why, .protect = FALSE)
 ```
 
-# Selected Conference Presentations and Workshops
+# Selected Conference Presentations and Invited Talks
 
 ```{r}
-# short version
-tribble(~ Title, ~ Conference, ~ Where, ~ Date, ~ Type, 
-  "How has the Brazilian Amazon been Constructed as a Problem? Presidential Speeches and Transnational Politics since 1985",
-  "The Graduate Institute of International and Development Studies (IHEID)",
-  "Geneva, Switzerland",
-  "27 October 2022",
-  "Center for International Environmental Studies (CIES) seminars",
-  "Anti-PC and Authenticity: Authenticity performances in politics in Brazil and the United States",
-  "American Sociological Association",
-  "Los Angeles, United States",
-  "6 August 2022",
-  "Regular session on the 'Party and its base: Understanding the relationship between political professionals and their audiences'",
-  "Performing Authenticity: Anti-Politically Correct Discourses in Brazil and the United
-States",
-  "Swiss Political Science Association",
-  "Online",
-  "4 February 2022",
-  "Workshop session on 'Liberal Ideology and Cultural Backlash'") %>% 
-  detailed_entries(what = Conference, with = Title, when = Date, where = Where, 
-                   why = Type, .protect = FALSE)
-# Longer version
+# # short version
 # tribble(~ Title, ~ Conference, ~ Where, ~ Date, ~ Type, 
 #   "How has the Brazilian Amazon been Constructed as a Problem? Presidential Speeches and Transnational Politics since 1985",
 #   "The Graduate Institute of International and Development Studies (IHEID)",
@@ -138,29 +134,49 @@ States",
 #   "Los Angeles, United States",
 #   "6 August 2022",
 #   "Regular session on the 'Party and its base: Understanding the relationship between political professionals and their audiences'",
-#   "Amazonian Repertoires in Brazilian Presidential Discourse since 1985",
-#   "Latin American Studies Association",
-#   "Online",
-#   "6 May 2022",
-#   "Panel on the 'Forest Managements Conservation and Agricultural Production'",
-#   "Anti-Political Correctness and Authenticity: Authenticity performances in politics in Brazil and the United States",
-#   "Université de Lausanne",
-#   "Lausanne, Switzerland",
-#   "31 March 2022",
-#   "Lecture for the Research Group on Elections and Political Citizenship (GREC)",
 #   "Performing Authenticity: Anti-Politically Correct Discourses in Brazil and the United
 # States",
 #   "Swiss Political Science Association",
 #   "Online",
 #   "4 February 2022",
-#   "Workshop session on 'Liberal Ideology and Cultural Backlash'",
-#   "The Construction of a Migratory Crisis: The Venezuelan Migration to Brazil",
-#   "Latin American Studies Association",
-#   "Online",
-#   "15 May 2020",
-#   "Panel on 'Las distintas violencias de las migraciones'") %>% 
+#   "Workshop session on 'Liberal Ideology and Cultural Backlash'") %>% 
 #   detailed_entries(what = Conference, with = Title, when = Date, where = Where, 
 #                    why = Type, .protect = FALSE)
+# Longer version
+tribble(~ Title, ~ Conference, ~ Where, ~ Date, ~ Type,
+  "How has the Brazilian Amazon been Constructed as a Problem? Presidential Speeches and Transnational Politics since 1985",
+  "The Graduate Institute of International and Development Studies (IHEID)",
+  "Geneva, Switzerland",
+  "27 October 2022",
+  "Center for International Environmental Studies (CIES) seminars",
+  "Anti-PC and Authenticity: Authenticity performances in politics in Brazil and the United States",
+  "American Sociological Association",
+  "Los Angeles, United States",
+  "6 August 2022",
+  "Regular session on the 'Party and its base: Understanding the relationship between political professionals and their audiences'",
+  "Amazonian Repertoires in Brazilian Presidential Discourse since 1985",
+  "Latin American Studies Association",
+  "Online",
+  "6 May 2022",
+  "Panel on the 'Forest Managements Conservation and Agricultural Production'",
+  "Anti-Political Correctness and Authenticity: Authenticity performances in politics in Brazil and the United States",
+  "Université de Lausanne",
+  "Lausanne, Switzerland",
+  "31 March 2022",
+  "Invited talk for the Research Group on Elections and Political Citizenship (GREC)",
+  "Performing Authenticity: Anti-Politically Correct Discourses in Brazil and the United
+States",
+  "Swiss Political Science Association",
+  "Online",
+  "4 February 2022",
+  "Workshop session on 'Liberal Ideology and Cultural Backlash'",
+  "The Construction of a Migratory Crisis: The Venezuelan Migration to Brazil",
+  "Latin American Studies Association",
+  "Online",
+  "15 May 2020",
+  "Panel on 'Las distintas violencias de las migraciones'") %>%
+  detailed_entries(what = Conference, with = Title, when = Date, where = Where,
+                   why = Type, .protect = FALSE)
 ```
 
 # Skills
